Fix problem with connections staying in close_wait state

BUG: 156163

svn path=/trunk/extragear/network/ktorrent/; revision=764849